Add websocket transcription functionality and update database models

--- a/env.example
+++ b/env.example
@@ -56,6 +56,18 @@ MANUAL_REVIEW_THRESHOLD=0.4
 SECRET_KEY=your_secret_key_here_change_in_production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# WebSocket Settings
+WEBSOCKET_MAX_CONNECTIONS=100
+WEBSOCKET_HEARTBEAT_INTERVAL=30
+WEBSOCKET_CHUNK_TIMEOUT=10
+WEBSOCKET_MAX_SESSION_DURATION=7200
+WEBSOCKET_AUDIO_BUFFER_SIZE=8192
+WEBSOCKET_SAMPLE_RATE=16000
+WEBSOCKET_CHANNELS=1
+WEBSOCKET_CHUNK_DURATION=2.0
+WEBSOCKET_OVERLAP_DURATION=0.5
+WEBSOCKET_WHISPER_MODEL=base
+
 # Optional: JWT Settings
 JWT_ALGORITHM=HS256
 
