--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,58 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-settings
 
 # Database
-sqlalchemy[asyncio]==2.0.23
-asyncpg==0.29.0
-alembic==1.13.1
+sqlalchemy[asyncio]
+asyncpg
+alembic
 
 # Task Queue
-celery==5.3.4
-redis==5.0.1
-nest_asyncio==1.5.8
+celery
+redis
+nest_asyncio
 
 # ASR & NLP
-openai-whisper==20231117
-transformers==4.35.0
-torch==2.1.0
-torchaudio==2.1.0
-numpy==1.26.4
-accelerate==0.25.0
-flower==2.0.1
-sentence-transformers==2.2.2
+openai-whisper
+transformers
+# PyTorch ecosystem - keeping compatible versions
+torch>=2.0.0,<3.0.0
+torchaudio>=2.0.0,<3.0.0
+numpy
+accelerate
+flower
+sentence-transformers
 
 # Audio Processing
-librosa==0.10.1
-soundfile==0.12.1
-pydub==0.25.1
+librosa
+soundfile
+pydub
 
 # AI/ML Services
-google-generativeai==0.3.2
-openai==1.3.7
+google-generativeai
+openai
 
 # HTTP Client
-httpx==0.25.2
-aiohttp==3.9.1
+httpx
+aiohttp
 
 # Utilities
-python-multipart==0.0.6
-loguru==0.7.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-aiofiles==23.2.1
+python-multipart
+loguru
+python-jose[cryptography]
+passlib[bcrypt]
+python-dotenv
+aiofiles
+
+# WebSocket Support
+websockets
+python-socketio
 
 # Development
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
+pytest
+pytest-asyncio
+black
+isort
+flake8
