--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Development Dockerfile with hot reloading and debugging support
-FROM python:3.11-slim
+FROM python:3.10-slim
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -36,7 +36,7 @@ RUN pip install --no-cache-dir --upgrade pip && \
     pytest-xdist
 
 # Download Whisper models during build
-RUN python -c "import whisper; whisper.load_model('base')"
+RUN python -c "import whisper; whisper.load_model('base')" || echo "Whisper model download failed, will download at runtime"
 
 # Create uploads and logs directories
 RUN mkdir -p /app/uploads /app/logs /app/notebooks && \
