--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,9 +159,12 @@ services:
   # Flower for Celery monitoring
   ambientai_be_flower:
     build: .
-    command: celery -A celery_app flower --port=5555
+    command: sh -c "cd /app && python -m celery -A celery_app flower --port=5555"
     ports:
       - "5555:5555"
+    volumes:
+      - .:/app
+      - ./logs:/app/logs
     environment:
       - CELERY_BROKER_URL=redis://ambientai_be_redis:6379/0
       - CELERY_RESULT_BACKEND=redis://ambientai_be_redis:6379/0
