--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,11 @@ events {
 
 http {
     upstream api {
-        server api:8000;
+        server ambientai_be_api:8000;
     }
 
     upstream flower {
-        server flower:5555;
+        server ambientai_be_flower:5555;
     }
 
     # Rate limiting
