--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pydantic-settings==2.1.0
 sqlalchemy[asyncio]==2.0.23
 asyncpg==0.29.0
 alembic==1.13.1
+mako==1.3.0
 
 # Task Queue
 celery==5.3.4
@@ -16,13 +17,15 @@ nest_asyncio==1.5.8
 
 # ASR & NLP
 openai-whisper==20231117
-transformers==4.35.0
+transformers==4.44.2
+tokenizers==0.19.1
+safetensors==0.4.3
+huggingface_hub==0.23.4
 torch==2.1.0
 torchaudio==2.1.0
 numpy==1.26.4
-accelerate==0.25.0
+accelerate==0.31.0
 flower==2.0.1
-sentence-transformers==2.2.2
 
 # Audio Processing
 librosa==0.10.1
@@ -51,3 +54,7 @@ pytest-asyncio==0.21.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
+ 
+# Datasets ingestion (Hugging Face)
+datasets==2.19.0
+requests==2.32.3
